--- a/styles/components.css
+++ b/styles/components.css
@@ -21,6 +21,10 @@
         background: linear-gradient(90deg, rgba(32,162,38,1) 0%, rgba(161,0,0,1) 100%);
         @apply text-white;
     }
+    .btn-simple {
+        @apply font-bold py-2 px-4  ;
+        background: #ffff;
+    }
 
     .btn-primary:hover {
          background-size: 200% 200%;
