--- a/styles/components.css
+++ b/styles/components.css
@@ -14,7 +14,7 @@
     }
 
     .btn {
-        @apply font-bold py-2 px-4 rounded-full;
+        @apply font-bold py-2 px-4;
     }
 
     .btn-primary {
